# high-performance-data-processing-pipeline

./: GUIDE.md  README.md  docker-compose.yml
api-python/: Dockerfile  main.py  pyproject.toml
infra/: init.sql
legacy-java/demo/: Dockerfile  pom.xml
legacy-java/demo/src/main/java/com/example/demo/controller/: ProcessController.java
legacy-java/demo/src/main/java/com/example/demo/model/: ProcessRequest.java
legacy-java/demo/src/test/java/com/example/demo/: DemoApplicationTests.java
worker-go/: Dockerfile  go.mod  process.go
