[project]
name = "api-python"
version = "0.1.0"
description = "high performance data processing pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.2",
    "aio-pika==9.3.0",
    "asyncpg==0.29.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"